fix(pinterest): story pins and some truncated texts

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -263,6 +263,16 @@
       background-color: @base !important;
     }
 
+    div[data-test-id="truncated-text"] {
+      div[data-test-id="more-button"] {
+        background: linear-gradient(90deg, transparent 0%, @base 15%) !important;
+      }
+
+      div[style="background: rgb(255, 255, 255);"] {
+        background-color: @base !important;
+      }
+    }
+
     div[data-test-id="flashlight-button"] {
       background-color: @base !important;
     }
@@ -287,6 +297,8 @@
       caret-color: @text;
     }
 
+    /* Video and story pins */
+
     div[data-test-id="visual-content-container"] video ~ div {
       svg {
         color: var(--color-text-icon-light) !important;
@@ -294,6 +306,12 @@
 
       div[role="progressbar"] > div {
         background-color: var(--color-text-icon-light) !important;
+      }
+    }
+
+    div[data-test-id="closeup-data-loaded"] div.Jea.Rym.zI7.iyn.Hsu {
+      svg, span {
+        color: var(--color-text-icon-light) !important;
       }
     }
 
